reworked releng build plugin parent/parent pom